fix: add button and dashboard

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  background-color: #F5F5F7;
+  font-family: "Rubik", serif;
+}
+.containerMain {
+  @apply container px-4 mx-auto ;
+}
